Feature: Add edit delete and localstorage

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
           <form action="" class="p-4" id="edit-todo-form">
             <textarea name="edited-todo-name" id="edited-todo-name" placeholder="New todo" class="border w-full resize-none px-2 py-2" rows="4"></textarea>
             <button type="submit" class="text-white bg-blue-500  py-3 w-48 rounded-2xl mx-auto block mt-4">Save</button>
-            <button type="button" class="text-gray-500 border-2 border-gray-800   py-3 w-48 rounded-2xl mx-auto block mt-4">Delete</button>
+            <button type="button" id="delete-todo-btn" class="text-gray-500 border-2 border-gray-800   py-3 w-48 rounded-2xl mx-auto block mt-4">Delete</button>
           </form>
         </div>
       </dialog>
     </main>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module"   src="/src/main.js"></script>
   </body>
 </html>
